<resources>
    <string name="app_name">Hello Shared Preferences</string>

    <!-- Button label for blue button -->
    <string name="blue_button">Blue</string>

    <!-- Button label for green button -->
    <string name="green_button">Green</string>

    <!-- Button label for red button -->
    <string name="red_button">Red</string>

    <!-- Button label for black button -->
    <string name="black_button">Black</string>

    <!-- Button label for Reset button -->
    <string name="reset_button">Reset</string>
    <string name="red">RED</string>
    <string name="button">Button</string>
    <string name="settins">Color Settings</string>
    <string name="change_color">Back</string>
    <string name="settings">Settings</string>
</resources>
