<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="someValue"
        tools:layout_editor_absoluteY="someValue">


    <Button

            android:id="@+id/green_background_button"
            style="@style/AppTheme.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green_background"
            android:onClick="changeBackground"
            android:text="@string/green_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="164dp"
            android:layout_marginStart="48dp"/>

    <Button
            android:id="@+id/blue_background_button"
            style="@style/AppTheme.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:background="@color/blue_background"
            android:onClick="changeBackground"
            android:text="@string/blue_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="236dp"/>

    <Button
            android:id="@+id/black_background_button"
            style="@style/AppTheme.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:onClick="changeBackground"
            android:text="@string/black_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="368dp"
            android:layout_marginStart="48dp"/>

    <Button
            android:id="@+id/red_background_button"
            style="@style/AppTheme.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red_background"
            android:onClick="changeBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/red" android:layout_marginBottom="304dp" android:layout_marginStart="48dp"/>

    <Button
            android:text="Activity One"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/actone" android:layout_marginTop="108dp"/>
    <Button
            android:text="Activity Two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/acttwo" android:layout_marginTop="108dp"/>
    <TextView
            android:text="@string/settins"
            android:textSize="40sp"
            android:layout_width="314dp"
            android:layout_height="50dp"
            android:id="@+id/Settings"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>